<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.iso53.nothingcompass.CompassFragment">

    <data>

        <import type="io.github.iso53.nothingcompass.model.LocationStatus" />

        <variable
            name="model"
            type="io.github.iso53.nothingcompass.view.CompassViewModel" />
    </data>

    <!-- SINGLE ROOT VIEW -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- COMPASS -->
        <FrameLayout
            android:id="@+id/compassContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rotatingGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rotation="@{-model.azimuth.degrees}">

                <ImageView
                    android:id="@+id/compass_spiral"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/compass_spiral"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Center point for circular constraints -->
                <View
                    android:id="@+id/center_point"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Degree labels -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_0_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_0_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="0"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_30_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_30_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="30"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_60_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_60_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="60"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_90_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_90_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="90"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_120_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_120_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="120"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_150_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_150_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="150"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_180_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_180_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="180"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_210_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_210_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="210"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_240_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_240_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="240"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_270_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_270_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="270"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_300_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_300_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="300"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree_330_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/degree_330_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="330"
                    app:layout_constraintCircleRadius="@dimen/_140sdp"
                    tools:ignore="MissingConstraints" />

                <!-- Direction Labels -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cardinal_direction_north_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/cardinal_direction_north_abbreviation"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="0"
                    app:layout_constraintCircleRadius="@dimen/_90sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cardinal_direction_east_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/cardinal_direction_east_abbreviation"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="90"
                    app:layout_constraintCircleRadius="@dimen/_90sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cardinal_direction_south_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/cardinal_direction_south_abbreviation"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="180"
                    app:layout_constraintCircleRadius="@dimen/_90sdp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cardinal_direction_west_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="@{model.azimuth.degrees}"
                    android:text="@string/cardinal_direction_west_abbreviation"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    app:layout_constraintCircle="@+id/center_point"
                    app:layout_constraintCircleAngle="270"
                    app:layout_constraintCircleRadius="@dimen/_90sdp"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/device_heading_indicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/device_heading_indicator" />

        </FrameLayout>

        <ImageView
            android:id="@+id/compass_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/compass_indicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TOP INFO -->
        <LinearLayout
            android:id="@+id/compassInfoContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_400sdp">

            <TextView
                android:id="@+id/currentCompassDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text='@{" " + String.valueOf((int) model.azimuth.degrees) + "°"}'
                android:textSize="@dimen/_40ssp" />

            <TextView
                android:id="@+id/currentCompassDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{model.azimuth.cardinalDirection.labelResourceId}"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>

    </FrameLayout>

</layout>
